syntax = "proto3";

package minifinancier;

import "google/protobuf/timestamp.proto";

service PaymentGateway {
  // ユーザーに請求を行う
  rpc Charge(ChargeRequest) returns (Payment);

  // 引数の請求に対して返金を行う
  rpc Refund(RefundRequest) returns (Payment);
  
  // ヘルスチェック
  rpc CheckHealth(HealthCheckRequest) returns (Health);
}

message Payment {
  // 請求 ID
  string id = 1;

  // 請求対象のユーザー ID
  uint64 user_id = 2;

  // 請求金額
  uint32 amount = 3;

  // 請求の作成時刻
  google.protobuf.Timestamp create_time = 4;

  // 返金時刻
  google.protobuf.Timestamp refund_time = 5;
}

message ChargeRequest {
  // 請求対象のユーザー ID
  uint64 user_id = 1;

  // 請求金額
  uint32 amount = 2;
}

message RefundRequest {
  // 請求 ID
  string payment_id = 1;
}

message HealthCheckRequest {}

message Health {
  enum ServingStatus {
    UNKNOWN = 0;
    SERVING = 1;
    NOT_SERVING = 2;
    SERVICE_UNKNOWN = 3;
  }
  ServingStatus status = 1;
}
